Modified HTML with images

--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
+<div id="header">
+    <div id="menu">
+        <h2>Portfolio</h2>
+    </div>
+</div>
+<div id="overlay"></div>
+<div id="frame">
+    <img src="" alt="" class="popup">
+</div>
+<div id="wrapper">
+    <ul id="portfolio">
+        <li><img src="images/1.jpg"></li>
+        <li><img src="images/2.jpg"></li>
+        <li><img src="images/3.jpg"></li>
+        <li><img src="images/4.jpg"></li>
+        <li><img src="images/5.jpg"></li>
+        <li><img src="images/6.jpg"></li>
+        <li><img src="images/7.jpg"></li>
+        <li><img src="images/8.jpg"></li>
+    </ul>
+</div>
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="script.js"></script>
 </body>
